# inference_lib

./: CMakeLists.txt  pyproject.toml
python/hogwild/: attention.py
src/: binding.cu  cache.cuh  common.h  q_rope.h  rope.cuh
src/kernels/: kernel_v21.cuh
src/tpl/: kernel_v21.cu
