[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "hogwild"
version = "0.0.1"
description = "Hogwild inference"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.scikit-build]
metadata.dependencies = {provider = "metadata_provider", provider-path = "."} # Local
experimental = true
wheel.py-api = "cp310"
build-dir = "build/{wheel_tag}"
build.targets = ["hogatt"]

[tool.scikit-build.wheel.packages]
"hogwild" = "python/hogwild"

[tool.scikit-build.cmake.define]
HOGDILD_TORCH_BINDINGS = "ON"
HOGDILD_BENCHMARKS = "OFF"
HOGWILD_TESTS = "OFF"
